# FnQ3-sedawkgrep

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  LICENSE  Makefile  README.md  make-macosx-app.sh  make-macosx-ub2.sh
.github/workflows/: build.yml  nightly.yml
.install/: README.html
code/audio/: AudioSystem.cpp
code/client/: cl_cgame.c  cl_cin.c  cl_console.c  cl_curl.c  cl_curl.h  cl_hud.c  cl_input.c  cl_keys.c  cl_main.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keycodes.h  snd_local.h  snd_main.c  snd_public.h
code/qcommon/: bsp_v43.h  cm_load.c  common.c  files.c  json.h  q_shared.h  qcommon.h  qfiles.h
code/renderer/: qgl.h  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c
code/renderer2/: qgl.h  tr_backend.c  tr_bsp.c  tr_common.h  tr_glsl.c  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_model_iqm.c  tr_postprocess.c  tr_postprocess.h  tr_scene.c  tr_shade.c  tr_shader.c  tr_shadows.c
code/renderer2/glsl/: generic_fp.glsl
code/renderercommon/: tr_image_wal.c  tr_types.h
code/renderervk/: tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  vk.c  vk.h
code/renderervk/shaders/: gen_frag.tmpl  light_frag.tmpl
code/renderervk/shaders/spirv/: shader_data.c
code/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_glw.h  sdl_input.c  sdl_snd.c
code/server/: server.h  sv_ccmds.c  sv_client.c  sv_init.c  sv_main.c  sv_snapshot.c
code/unix/: linux_glimp.c  unix_main.c  unix_shared.c  unix_syscon.h
code/win32/: win_input.c  win_resource.rc  win_syscon.c  win_wndproc.c
code/win32/msvc2005/: fnquake3-ded.vcproj  fnquake3.sln  fnquake3.vcproj  renderer2.vcproj
code/win32/msvc2017/: fnquake3-ded.vcxproj  fnquake3-ded.vcxproj.filters  fnquake3.sln  fnquake3.vcxproj  fnquake3.vcxproj.filters  renderer.vcxproj  renderer2.vcxproj  renderer2.vcxproj.filters  renderervk.vcxproj
docs/: ASPECT_CORRECTION.md  AUDIO.md  CONSOLE.md  DISPLAY.md  SCREENSHOTS.md  TECHNICAL.md  VISUALS.md  fnquake3-changes.txt  fnquake3.htm  fnquake3.md  q3url_add.cmd  quake3e-changes.txt
docs/fnquake3/: CHANGELOG.md  TECHNICAL.md
docs/templates/: README.md.in  install-readme.html.in
scripts/: changelog.py  fnq3_meta.py  generate_docs.py  nightly.py  release.py  version.py
version/: fnq3_version.h
